--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;URL='www.minejogo.com.br/'" />
+<script type="text/javascript">window.location = "//www.minejogo.com.br";</script>
