--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>404</title>
-  <meta http-equiv="refresh" content="0;URL='www.minejogo.com.br/'" />
+  <meta http-equiv="refresh" content="0;URL='/$1'" />
 </head>
 
 <body>
