--- a/404.html
+++ b/404.html
@@ -2,11 +2,10 @@
 <html>
 <head>
   <title>404</title>
-  <meta http-equiv="refresh" content="0;URL='/'" />
+  <meta http-equiv="refresh" content="0;URL=''" />
 </head>
 
 <body>
-404
 </body>
 
 </html>
