--- a/404.html
+++ b/404.html
@@ -2,7 +2,11 @@
 <html>
 <head>
   <title>404</title>
-  <meta http-equiv="refresh" content="0;URL=''" />
+<script type="text/javascript">
+var host= window.location.host;
+var href= window.location.href;
+}
+</script>
 </head>
 
 <body>
