--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@ var host= window.location.host;
 var href= window.location.href;
 }
 </script>
+  <script type="text/javascript">if( !/\.?www./g.test(location.host) ) location.href = location.href.replace("://","://www.")</script>
 </head>
 
 <body>
